--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "migrate": "node scripts/migrate.mjs"
   },
   "dependencies": {
+    "@sanity/image-url": "^1.1.0",
+    "@sanity/vision": "^3.71.2",
+    "dotenv": "^16.4.7",
     "lucide-react": "^0.468.0",
     "next": "15.0.4",
+    "next-sanity": "^9.8.42",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "sanity": "^3.71.2",
+    "styled-components": "^6.1.14"
   },
   "devDependencies": {
     "@types/node": "^20",
